--- a/00_Data_Acquisition_Prototyping.ipynb
+++ b/00_Data_Acquisition_Prototyping.ipynb
@@ -9,18 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:25:44.941850Z",
-     "start_time": "2020-01-25T04:25:43.919866Z"
+     "end_time": "2020-01-25T20:26:56.159051Z",
+     "start_time": "2020-01-25T20:26:56.152565Z"
     }
    },
    "outputs": [],
@@ -35,16 +28,18 @@
     "\n",
     "import pickle\n",
     "import os\n",
-    "import sys"
+    "import sys\n",
+    "\n",
+    "from JsonCollector import JsonCollector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:25:44.950636Z",
-     "start_time": "2020-01-25T04:25:44.944778Z"
+     "end_time": "2020-01-25T20:26:57.709388Z",
+     "start_time": "2020-01-25T20:26:57.701581Z"
     }
    },
    "outputs": [],
@@ -53,76 +48,79 @@
     "    with open(filename + '.pkl', 'wb') as f:\n",
     "        pickle.dump(obj, f, pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "def load_obj(name):\n",
+    "def load_obj(filename):\n",
     "    with open(filename + '.pkl', 'rb') as f:\n",
     "        return pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:25:44.977962Z",
-     "start_time": "2020-01-25T04:25:44.954551Z"
+     "end_time": "2020-01-25T20:26:58.550316Z",
+     "start_time": "2020-01-25T20:26:58.545921Z"
     }
    },
    "outputs": [],
    "source": [
-    "import time\n",
-    "import requests\n",
+    "# This class was exported to JsonCollector.py\n",
     "\n",
-    "class JsonCollector:\n",
-    "    def __init__(self, mintime, subreddit):\n",
-    "        self.url = \"https://api.pushshift.io/reddit/search/submission/\"\n",
-    "        self.subreddit = subreddit\n",
     "\n",
-    "        # the Unix times we have already searched. We searching from mintime to current,\n",
-    "        # updating each time we do it.\n",
-    "        self.min = mintime\n",
+    "# import time\n",
+    "# import requests\n",
+    "\n",
+    "# class JsonCollector:\n",
+    "#     def __init__(self, mintime, subreddit):\n",
+    "#         self.url = \"https://api.pushshift.io/reddit/search/submission/\"\n",
+    "#         self.subreddit = subreddit\n",
+    "\n",
+    "#         # the Unix times we have already searched. We searching from mintime to current,\n",
+    "#         # updating each time we do it.\n",
+    "#         self.min = mintime\n",
     "        \n",
-    "        #contains dictionary keyed on postid, with value=json block\n",
-    "        self.data = {}\n",
+    "#         #contains dictionary keyed on postid, with value=json block\n",
+    "#         self.data = {}\n",
     "        \n",
     "    \n",
-    "    def fetch_json(self, lower, upper):\n",
-    "        r = requests.get(\n",
-    "            self.url,\n",
-    "            params={\n",
-    "                \"subreddit\": self.subreddit,\n",
-    "                \"before\": upper,\n",
-    "                \"after\": lower,\n",
-    "                \"size\": 500\n",
-    "            }\n",
-    "        )\n",
-    "        assert r.status_code == 200\n",
-    "        return r.json()[\"data\"]\n",
+    "#     def fetch_json(self, lower, upper):\n",
+    "#         r = requests.get(\n",
+    "#             self.url,\n",
+    "#             params={\n",
+    "#                 \"subreddit\": self.subreddit,\n",
+    "#                 \"before\": upper,\n",
+    "#                 \"after\": lower,\n",
+    "#                 \"size\": 500\n",
+    "#             }\n",
+    "#         )\n",
+    "#         assert r.status_code == 200\n",
+    "#         return r.json()[\"data\"]\n",
     "    \n",
-    "    # Find posts starting at the subreddit's start, up to the current time\n",
-    "    def read_forward(self):\n",
-    "        jsonlist = self.fetch_json(self.min, int(time.time()))        \n",
+    "#     # Find posts starting at the subreddit's start, up to the current time\n",
+    "#     def read_forward(self):\n",
+    "#         jsonlist = self.fetch_json(self.min, int(time.time()))        \n",
     "        \n",
-    "        if jsonlist:\n",
-    "            # save the data    \n",
-    "            for i in range(len(jsonlist)):\n",
-    "                self.data[jsonlist[i][\"id\"]] = jsonlist[i]\n",
-    "            self.min = jsonlist[-1][\"created_utc\"]\n",
-    "        return jsonlist\n",
+    "#         if jsonlist:\n",
+    "#             # save the data    \n",
+    "#             for i in range(len(jsonlist)):\n",
+    "#                 self.data[jsonlist[i][\"id\"]] = jsonlist[i]\n",
+    "#             self.min = jsonlist[-1][\"created_utc\"]\n",
+    "#         return jsonlist\n",
     "\n",
-    "    def populate(self):\n",
-    "        while self.read_forward():\n",
+    "#     def populate(self):\n",
+    "#         while self.read_forward():\n",
     "#             display(len(self.data.keys()))\n",
-    "            # The pushshift api limit is apparently 3Hz.\n",
-    "            time.sleep(0.5)"
+    "#             # The pushshift api limit is apparently 3Hz.\n",
+    "#             time.sleep(0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:25:44.987721Z",
-     "start_time": "2020-01-25T04:25:44.979913Z"
+     "end_time": "2020-01-25T20:26:58.893832Z",
+     "start_time": "2020-01-25T20:26:58.890049Z"
     }
    },
    "outputs": [],
@@ -135,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:25:44.997501Z",
-     "start_time": "2020-01-25T04:25:44.989679Z"
+     "end_time": "2020-01-25T20:26:59.098776Z",
+     "start_time": "2020-01-25T20:26:59.094818Z"
     }
    },
    "outputs": [],
    "source": [
-    "DIR = \"C:\\\\Users\\\\AzNsAnTaGiN\\\\DSI\\\\Projects\\\\project_3\\\\\"\n",
+    "DIR = \"C:\\\\Users\\\\AzNsAnTaGiN\\\\DSI\\\\Projects\\\\project_3\\\\data\\\\\"\n",
     "FILE1 = \"theonion\"\n",
     "FILE2 = \"nottheonion\"\n",
     "FILE3 = \"onionheadlines\""
@@ -152,26 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:25:45.008224Z",
-     "start_time": "2020-01-25T04:25:44.999440Z"
+     "end_time": "2020-01-25T20:26:59.810573Z",
+     "start_time": "2020-01-25T20:26:59.801699Z"
     }
    },
    "outputs": [],
    "source": [
-    "if not os.path.isfile(DIR+FILE1):\n",
+    "if not os.path.isfile(DIR+FILE1+\".pkl\"):\n",
     "    theonion = JsonCollector(mintime=1206303030, subreddit=\"TheOnion\")\n",
     "else:\n",
     "    theonion = load_obj(DIR+FILE1)\n",
     "    \n",
-    "if not os.path.isfile(DIR+FILE2):\n",
+    "if not os.path.isfile(DIR+FILE2+\".pkl\"):\n",
     "    nottheonion = JsonCollector(mintime=1224968000, subreddit=\"nottheonion\")\n",
     "else:\n",
     "    nottheonion = load_obj(DIR+FILE2)\n",
     "\n",
-    "if not os.path.isfile(DIR+FILE3):\n",
+    "if not os.path.isfile(DIR+FILE3+\".pkl\"):\n",
     "    onionheadlines = JsonCollector(mintime=1224968000, subreddit=\"OnionHeadlines\")\n",
     "else:\n",
     "    onionheadlines = load_obj(DIR+FILE3)"
@@ -179,11 +177,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:26:57.820933Z",
-     "start_time": "2020-01-25T04:26:07.283815Z"
+     "end_time": "2020-01-25T20:25:23.421997Z",
+     "start_time": "2020-01-25T20:25:22.211Z"
     }
    },
    "outputs": [],
@@ -193,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:48:53.278449Z",
-     "start_time": "2020-01-25T04:26:57.822885Z"
+     "end_time": "2020-01-25T20:25:23.423950Z",
+     "start_time": "2020-01-25T20:25:22.216Z"
     }
    },
    "outputs": [],
@@ -207,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:49:11.883081Z",
-     "start_time": "2020-01-25T04:48:53.281379Z"
+     "end_time": "2020-01-25T20:25:23.424925Z",
+     "start_time": "2020-01-25T20:25:22.222Z"
     }
    },
    "outputs": [],
@@ -221,42 +219,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:49:11.899635Z",
-     "start_time": "2020-01-25T04:49:11.885972Z"
+     "end_time": "2020-01-25T20:25:23.427162Z",
+     "start_time": "2020-01-25T20:25:22.225Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17039"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "441717"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "6531"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(len(theonion.data.keys()))\n",
     "display(len(nottheonion.data.keys()))\n",
@@ -265,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T04:49:18.769810Z",
-     "start_time": "2020-01-25T04:49:11.903542Z"
+     "end_time": "2020-01-25T20:25:23.428830Z",
+     "start_time": "2020-01-25T20:25:22.229Z"
     }
    },
    "outputs": [],
@@ -281,35 +251,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-25T05:15:07.995463Z",
-     "start_time": "2020-01-25T05:15:07.985703Z"
+     "end_time": "2020-01-25T20:25:23.429804Z",
+     "start_time": "2020-01-25T20:25:22.232Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "465287"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(len(theonion.data.keys()))+(len(nottheonion.data.keys()))+(len(onionheadlines.data.keys()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
