--- a/00_Data_Acquisition_Prototyping.ipynb
+++ b/00_Data_Acquisition_Prototyping.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data collection"
+    "# Data collection\n",
+    "\n",
+    "In this notebook, we collect data using the Pushshift API, and save it to a pickled object. Note that we store our data in a JsonCollector object, which is implemented in JsonCollector.py."
    ]
   },
   {
@@ -51,67 +53,6 @@
     "def load_obj(filename):\n",
     "    with open(filename + '.pkl', 'rb') as f:\n",
     "        return pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-01-25T20:26:58.550316Z",
-     "start_time": "2020-01-25T20:26:58.545921Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# This class was exported to JsonCollector.py\n",
-    "\n",
-    "\n",
-    "# import time\n",
-    "# import requests\n",
-    "\n",
-    "# class JsonCollector:\n",
-    "#     def __init__(self, mintime, subreddit):\n",
-    "#         self.url = \"https://api.pushshift.io/reddit/search/submission/\"\n",
-    "#         self.subreddit = subreddit\n",
-    "\n",
-    "#         # the Unix times we have already searched. We searching from mintime to current,\n",
-    "#         # updating each time we do it.\n",
-    "#         self.min = mintime\n",
-    "        \n",
-    "#         #contains dictionary keyed on postid, with value=json block\n",
-    "#         self.data = {}\n",
-    "        \n",
-    "    \n",
-    "#     def fetch_json(self, lower, upper):\n",
-    "#         r = requests.get(\n",
-    "#             self.url,\n",
-    "#             params={\n",
-    "#                 \"subreddit\": self.subreddit,\n",
-    "#                 \"before\": upper,\n",
-    "#                 \"after\": lower,\n",
-    "#                 \"size\": 500\n",
-    "#             }\n",
-    "#         )\n",
-    "#         assert r.status_code == 200\n",
-    "#         return r.json()[\"data\"]\n",
-    "    \n",
-    "#     # Find posts starting at the subreddit's start, up to the current time\n",
-    "#     def read_forward(self):\n",
-    "#         jsonlist = self.fetch_json(self.min, int(time.time()))        \n",
-    "        \n",
-    "#         if jsonlist:\n",
-    "#             # save the data    \n",
-    "#             for i in range(len(jsonlist)):\n",
-    "#                 self.data[jsonlist[i][\"id\"]] = jsonlist[i]\n",
-    "#             self.min = jsonlist[-1][\"created_utc\"]\n",
-    "#         return jsonlist\n",
-    "\n",
-    "#     def populate(self):\n",
-    "#         while self.read_forward():\n",
-    "#             display(len(self.data.keys()))\n",
-    "#             # The pushshift api limit is apparently 3Hz.\n",
-    "#             time.sleep(0.5)"
    ]
   },
   {
