--- a/03_TFIDF_Models.ipynb
+++ b/03_TFIDF_Models.ipynb
@@ -1212,11 +1212,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's nothing like fitting 8 (technically a LOT more than 8) very similar models and seeing them perform virtually identically...\n",
-    "\n",
-    "In all seriousness, our first model, with naive CountVectorization + a basic Logistic Regression was very performant, and in fact none of our additional models appeared to make significant differences.\n",
-    "\n",
-    "In our next notebook, we'll explore using TF-IDF instead of CountVectorizer and seeing how much our results. In the notebook after that, we'll explore using lemmatization and word embeddings with spaCy."
+    "As with our CountVectorized models, our BernoulliNB models were slighty better than the others, but it's hard to tell if its a statistically significant difference. "
    ]
   }
  ],
