--- a/05_SVM.ipynb
+++ b/05_SVM.ipynb
@@ -10,23 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-31T11:24:45.379285Z",
-     "start_time": "2020-01-31T11:24:44.715058Z"
+     "end_time": "2020-01-31T11:55:50.271875Z",
+     "start_time": "2020-01-31T11:55:50.267884Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\AzNsAnTaGiN\\Anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -37,23 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-31T11:24:41.880683Z",
-     "start_time": "2020-01-31T11:24:41.796907Z"
+     "end_time": "2020-01-31T11:55:50.633563Z",
+     "start_time": "2020-01-31T11:55:50.628577Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\AzNsAnTaGiN\\Anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import Normalizer\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
@@ -68,23 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-31T11:24:45.846034Z",
-     "start_time": "2020-01-31T11:24:45.540852Z"
+     "end_time": "2020-01-31T11:55:50.848794Z",
+     "start_time": "2020-01-31T11:55:50.843685Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\AzNsAnTaGiN\\Anaconda3\\lib\\importlib\\_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
     "from nltk.stem import WordNetLemmatizer\n",
@@ -94,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-31T11:24:45.856008Z",
-     "start_time": "2020-01-31T11:24:45.848041Z"
+     "end_time": "2020-01-31T11:55:51.047449Z",
+     "start_time": "2020-01-31T11:55:51.043459Z"
     }
    },
    "outputs": [],
@@ -114,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-31T11:24:46.023566Z",
-     "start_time": "2020-01-31T11:24:46.019570Z"
+     "end_time": "2020-01-31T11:55:51.303129Z",
+     "start_time": "2020-01-31T11:55:51.300136Z"
     }
    },
    "outputs": [],
@@ -436,10 +409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-01-31T11:47:33.355Z"
+     "end_time": "2020-01-31T11:53:17.233117Z",
+     "start_time": "2020-01-31T11:48:25.419585Z"
     }
    },
    "outputs": [
@@ -469,6 +443,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.8118322559512914"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -479,11 +462,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Lord would you look at those execution times! 5 minutes, on average. Presumably if I reduced my feature space SVM would be happier."
+   ]
   }
  ],
  "metadata": {
